--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Quickly find what time it is where your coworkers are",
   "main": "echo \"Error: no main specified\" && exit 1",
   "scripts": {
+    "build": "webpack && stylus -c stylesheets/index.styl",
     "watch": "webpack  --debug --progress --colors --watch & stylus -w stylesheets/index.styl",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
