--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
 
   "permissions": [
     "*://timezone.io/*",
-    "location",
+    "geolocation",
     "tabs",
     "storage",
     "notifications"
