--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^5.3.2",
     "gulp": "^3.9.0",
     "json-loader": "^0.5.3",
+    "stylus": "^0.54.5",
     "webpack": "^1.12.2"
   },
   "dependencies": {
