Complete automatic location check

--- a/manifest.json
+++ b/manifest.json
@@ -24,10 +24,11 @@
   "permissions": [
     "*://timezone.io/*",
     "*://timezone.dev/*",
+    "alarms",
     "geolocation",
-    "tabs",
     "notifications",
-    "storage"
+    "storage",
+    "tabs"
   ],
 
   "icons": {
