Add short name. Add bundle script

--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 2,
 
   "name": "Timezone.io",
+  "short_name": "Timezone.io",
   "description": "Quickly find what time it is where your coworkers are",
   "version": "0.1",
   "author": "Dan Farrelly",
