--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "echo \"Error: no main specified\" && exit 1",
   "scripts": {
     "build": "webpack && stylus -c stylesheets/index.styl",
+    "package": "zip -qr extension-bundle.zip . -x \\*.zip -x .git/\\* -x node_modules/\\*",
     "watch": "webpack  --debug --progress --colors --watch & stylus -w stylesheets/index.styl",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
